--- a/src/assets/sass/component/_c-button.scss
+++ b/src/assets/sass/component/_c-button.scss
@@ -9,3 +9,11 @@
 input {
   border: solid 1px black;
 }
+.c-button {
+  width: 150px;
+  height: 30px;
+  text-align: center;
+  border-radius: 50px;
+  border: solid 1px;
+  margin: 0 10px 0 10px;
+}
