--- a/src/assets/sass/component/_c-button.scss
+++ b/src/assets/sass/component/_c-button.scss
@@ -4,7 +4,7 @@
   text-align: center;
   border-radius: 50px;
   border: solid 1px;
-  margin: 0 10px 0 10px;
+  margin: 5px 10px;
 }
 input {
   border: solid 1px black;
