リストとタスクカードのcssを追加

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -2,6 +2,8 @@
 
 // component
 @use './component/c-button';
+@use './component/c-todo_list';
+@use './component/c-todo_card';
 // foundation
 @use './foundation/reset';
 
