--- a/src/assets/sass/component/_c-todo_card.scss
+++ b/src/assets/sass/component/_c-todo_card.scss
@@ -2,7 +2,11 @@
   width: 240px;
   background-color: #FFF;
   border-radius: 5px;
+  margin-bottom: 8px;
   padding: 10px;
+  &:last-child {
+    margin-bottom: 0;
+  }
   &--inner {
     pointer-events: none;
   }
